// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLabel component > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="cl-label test-class-name"
    for="test-input-id"
  >
    <span
      class="cl-label__text"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel component > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="cl-label test-class-name"
    for="test-input-id"
  >
    <span
      class="cl-label__text"
    >
      Test label
    </span>
    <abbr
      class="cl-label__required"
      title="required"
    >
      *
    </abbr>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel component > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="cl-label test-class-name"
    for="test-input-id"
  />
</DocumentFragment>
`;
